// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Public API Surface — @tutors/tutors-time-lib > should export service classes and types 1`] = `
[
  "getSupabase",
  "initSupabase",
  "BaseCalendarModel",
  "BaseLabModel",
  "CourseTime",
  "filterByDateRange",
  "getDistinctSortedDates",
  "formatDateShort",
  "formatTimeNearestMinute",
  "formatTimeMinutesOnly",
  "minutesOf",
  "heatColor",
  "getMondayForDate",
  "getDistinctSortedWeeks",
  "extractLabIdentifier",
  "extractStepName",
  "getDistinctSortedDatesFromRecords",
  "toggleLabViewMode",
]
`;

exports[`Public API Surface — @tutors/tutors-time-lib > should maintain stable export names 1`] = `
[
  "BaseCalendarModel",
  "BaseLabModel",
  "CourseTime",
  "TutorsTime",
  "extractLabIdentifier",
  "extractStepName",
  "filterByDateRange",
  "formatDateShort",
  "formatTimeMinutesOnly",
  "formatTimeNearestMinute",
  "getDistinctSortedDates",
  "getDistinctSortedDatesFromRecords",
  "getDistinctSortedWeeks",
  "getMondayForDate",
  "getSupabase",
  "heatColor",
  "initSupabase",
  "minutesOf",
  "toggleLabViewMode",
]
`;
